###############################################################################
# tuxanci/data/arena/CMakeLists.txt
###############################################################################
# DIRECTORIES
###############################################################################
# nada :P
###############################################################################
# CURRENT DIRECTORY FILES
###############################################################################
FILE ( GLOB files "*.map" )
INSTALL ( FILES ${files}
	DESTINATION ${CMAKE_DATA_PATH}/${APPNAME}/arena/ )
###############################################################################