###############################################################################
# tuxanci/data/font/CMakeLists.txt
###############################################################################
# DIRECTORIES
###############################################################################
# nada :P
###############################################################################
# CURRENT DIRECTORY FILES
###############################################################################
FILE ( GLOB files "*.ttf" )
INSTALL ( FILES ${files}
	DESTINATION ${CMAKE_DATA_PATH}/${APPNAME}/font/ )
###############################################################################