###############################################################################
# tuxanci/data/font/CMakeLists.txt
###############################################################################
# DIRECTORIES
###############################################################################
# nada :P
###############################################################################
# CURRENT DIRECTORY FILES
###############################################################################
IF ( NOT Server )
	FILE ( GLOB files "*.ttf" )
	INSTALL ( FILES ${files}
		DESTINATION ${CMAKE_INSTALL_DATADIR}/${APPNAME}/font/ )
ENDIF ( NOT Server )
###############################################################################