###############################################################################
# tuxanci/data/images/CMakeLists.txt
###############################################################################
# DIRECTORIES
###############################################################################
# nada :P
###############################################################################
# CURRENT DIRECTORY FILES
###############################################################################
FILE ( GLOB files "*.png" )
INSTALL ( FILES ${files}
	DESTINATION ${CMAKE_DATA_PATH}/${APPNAME}/images/ )
###############################################################################