###############################################################################
# tuxanci/data/images/CMakeLists.txt
###############################################################################
# DIRECTORIES
###############################################################################
# nada :P
###############################################################################
# CURRENT DIRECTORY FILES
###############################################################################
IF ( NOT Server )
	FILE ( GLOB files "*.png" )
	INSTALL ( FILES ${files}
		DESTINATION ${CMAKE_INSTALL_DATADIR}/${APPNAME}/images/ )
ENDIF ( NOT Server )
###############################################################################