###############################################################################
# tuxanci/data/sound/CMakeLists.txt
###############################################################################
# DIRECTORIES
###############################################################################
# nada :P
###############################################################################
# CURRENT DIRECTORY FILES
###############################################################################
IF ( NOT NO_Audio )
	FILE ( GLOB files "*.lang" )
	INSTALL ( FILES ${files}
		DESTINATION ${CMAKE_INSTALL_DATADIR}/${APPNAME}/lang/ )
ENDIF ( NOT NO_Audio )
###############################################################################