###############################################################################
# tuxanci/data/music/CMakeLists.txt
###############################################################################
# DIRECTORIES
###############################################################################
# nada :P
###############################################################################
# CURRENT DIRECTORY FILES
###############################################################################
IF ( NOT NO_Audio )
	FILE ( GLOB files "*.ogg" )
	INSTALL ( FILES ${files}
		DESTINATION ${CMAKE_INSTALL_DATADIR}/${APPNAME}/music/ )
ENDIF ( NOT NO_Audio )
###############################################################################