###############################################################################
# tuxanci/data/sound/CMakeLists.txt
###############################################################################
# DIRECTORIES
###############################################################################
# nada :P
###############################################################################
# CURRENT DIRECTORY FILES
###############################################################################
IF ( NOT NO_Audio )
	FILE ( GLOB files "*.ogg" )
	INSTALL ( FILES ${files}
		DESTINATION ${CMAKE_DATA_PATH}/${APPNAME}/sound/ )
ENDIF ( NOT NO_Audio )
###############################################################################